google auth works

--- a/src/app/diary/diary.component.html
+++ b/src/app/diary/diary.component.html
@@ -22,14 +22,11 @@
                     <label for="">Preparedness</label>
                     <input type="range" min="1" max="5">
                 </div>
-                <button>Save</button>
             </div>
             <div>
                 <div class="check-container">
                     <h3>Defining events</h3>
                     <textarea name="" id="" cols="30" rows="10"></textarea>
-                    <br>
-                    <button>Save</button>
                 </div>
                 
             </div>
@@ -46,10 +43,12 @@
                     <h3>How do i see the market?</h3>
                     <textarea name="" id="" cols="30" rows="10"></textarea>
                 </div>
-            </div>
-            <button>Save</button>
-    
+            </div>    
         </section>
+        <button>Save &RightArrow;</button>
+
+        
     </div>
+    
     
 </div>
