--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
                 <input type="password"placeholder="Password" required>
                 <button>Sign in</button>
             </form>
-            <button class="googlebtn">Or log in with <strong>Google</strong></button>
+            <button class="googlebtn" (click)="login()">Or log in with <strong>Google</strong></button>
         </div>
     </div>
 </div>
